feat: finish upload area modal

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -6,6 +6,10 @@
   --dark-gray-color: #333333;
   --medium-gray-color: #999999;
   --light-gray-color: #dddddd;
+  --light-green-color: #F4FFF0;
+  --medium-green-color: #D0FFBC;
+  --light-red-color: #FFEAEB;
+  --medium-red-color: #FF8488;
   --background: #f2f2f2;
   }
 
